# my-discord-bot

./: .gitignore  Cargo.toml  README.md  config_template.json
src/: _main.rs  commands.rs  main.rs  util.rs
src/commands/: deafen.rs  dlmusic.rs  join.rs  leave.rs  mod.rs  mute.rs  neko.rs  pause.rs  ping.rs  play.rs  playmusic.rs  queue.rs  resume.rs  saikoro.rs  seek.rs  skip.rs  undeafen.rs  unmute.rs
