[package]
authors = ["ppputtyo"]
name = "hello-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
serenity = "0.11.5"
tokio = {version = "1.28.0", features = ["macros", "rt-multi-thread"]}
songbird = "0.3.2"
