[package]
authors = ["ppputtyo"]
name = "hello-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
serenity = { versions = "0.11.5", features = [
    "cache",
    "client",
    "standard_framework",
    "voice",
    "rustls_backend",
] }
tokio = { version = "1.28.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
songbird = { version = "0.3.2", features = ["builtin-queue", "yt-dlp"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-futures = "0.2.5"
rand = "0.8.5"
